[gd_scene load_steps=3 format=3 uid="uid://bi6xpr1kh2mwl"]

[ext_resource type="Script" path="res://scenes/debug.gd" id="1_6ifps"]

[sub_resource type="Theme" id="Theme_0nen4"]
default_font_size = 10

[node name="debug" type="CanvasLayer"]
script = ExtResource("1_6ifps")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_0nen4")

[node name="CurrentStates" type="VBoxContainer" parent="Control"]
layout_mode = 1
offset_right = 1.0
offset_bottom = 50.0
mouse_filter = 2

[node name="GameState" type="Label" parent="Control/CurrentStates"]
process_mode = 3
layout_mode = 2
text = "game_state: "

[node name="MenuState" type="Label" parent="Control/CurrentStates"]
process_mode = 3
layout_mode = 2
text = "main_menu_state: "

[node name="EscapeState" type="Label" parent="Control/CurrentStates"]
process_mode = 3
layout_mode = 2
text = "escape_menu_state: "

[node name="SettingsState" type="Label" parent="Control/CurrentStates"]
process_mode = 3
layout_mode = 2
text = "settings_menu_state: "

[node name="DebugInfo" type="Label" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 26.0
grow_horizontal = 0
text = "Toggle Debug: f5"
